--- a/tasks/Taskfile.lint.yml
+++ b/tasks/Taskfile.lint.yml
@@ -12,16 +12,13 @@ tasks:
     desc: Lint Markdown
     cmds:
       - markdownlint -c '.github/linters/.markdownlint.yaml' *.md **/*.md
-    ignore_errors: true
 
   yaml:
     desc: Lint YAML
     cmds:
-      - yamllint -c '.github/linters/.yamllint.yaml' .
-    ignore_errors: true
+      - yamllint {{.BASE_DIR}}
 
   format:
     desc: Lint general formatting
     cmds:
-      - prettier --ignore-path '.github/linters/.prettierignore' --config '.github/linters/.prettierrc.yaml' --check .
-    ignore_errors: true
+      - prettier --ignore-path '.github/linters/.prettierignore' --check .
