--- a/tasks/Taskfile.argocd.yml
+++ b/tasks/Taskfile.argocd.yml
@@ -172,7 +172,7 @@ tasks:
       - sh: "which argocd"
         msg: "argocd {{.PATH_ERROR}}"
     cmds:
-      - argocd login argo.gruber.dev.br --username $ARGOCD_USERNAME --password $ARGOCD_PASSWORD
+      - argocd login localhost --username $ARGOCD_USERNAME --password $ARGOCD_PASSWORD
 
   refresh:
     preconditions:
@@ -185,3 +185,8 @@ tasks:
     cmds:
       - task: login
       - task: refresh
+
+  crds:
+    cmds:
+      - |
+        kubectl apply -k https://github.com/argoproj/argo-cd/manifests/crds\?ref\=stable
