--- a/.mise.toml
+++ b/.mise.toml
@@ -1,7 +1,7 @@
 [tools]
-golang = '1.22.2'
+go = '1.22.2'
 python = '3.11.6'
-task = '3.31.0'
+task = '3.37.2'
 vault = '1.15.2'
 terraform = '1.6.5'
 kubectl = '1.27.2'
@@ -14,5 +14,7 @@ vendir = '0.38.0'
 agebox = '0.6.1'
 node = '21.7.3'
 "go:github.com/zyedidia/eget" = "latest"
-"npm:prettier" = "latest"
-yamllint = "latest"
+"npm:prettier" = "3.2.5"
+yamllint = "1.35.1"
+helmfile = "0.165.0"
+helm = "3.15.2"
