--- a/tasks/Taskfile.workstation.yml
+++ b/tasks/Taskfile.workstation.yml
@@ -79,6 +79,18 @@ tasks:
         sudo systemctl status syncthing@$(whoami).service
         sudo ufw allow 22000/tcp
 
+  ubuntu:install:mise:
+    desc: Install mise
+    run: once
+    cmds:
+      - |
+        apt update -y && apt install -y gpg sudo wget curl
+        sudo install -dm 755 /etc/apt/keyrings
+        wget -qO - https://mise.jdx.dev/gpg-key.pub | gpg --dearmor | sudo tee /etc/apt/keyrings/mise-archive-keyring.gpg 1> /dev/null
+        echo "deb [signed-by=/etc/apt/keyrings/mise-archive-keyring.gpg arch=amd64] https://mise.jdx.dev/deb stable main" | sudo tee /etc/apt/sources.list.d/mise.list
+        sudo apt update
+        sudo apt install -y mise
+
   require:binary:
     silent: true
     desc: Ensures that a required binary exists
