--- a/profiles/default.yml
+++ b/profiles/default.yml
@@ -1,13 +1,8 @@
 workspace: workspace
 project: default
 repos:
-  - name: taskfiles
-    project: zloeber/taskfiles
-    url: git@github.com:zloeber/taskfiles.git
-    branches:
-      - main
-  - name: homelab-flux
-    project: zloeber/homelab-flux
-    url: git@github.com:zloeber/homelab-flux.git
+  - name: bootstrapr-gitops
+    project: zloeber/bootstrapr-gitops
+    url: git@github.com:zloeber/bootstrapr-gitops.git
     branches:
       - main
