--- a/tasks/Taskfile.github.yml
+++ b/tasks/Taskfile.github.yml
@@ -5,10 +5,9 @@ silent: true
 vars:
   GITHUB_PATH:
     sh: |
-      git remote get-url origin 2>/dev/null | sed -Ee 's/.*:(.+)\.git/\1/'
+      git remote get-url origin 2>/dev/null | sed -Ee 's/.*:(.+)\.git/\1/' || echo ''
   GITHUB_URL:
     sh: 'echo ${GITHUB_URL:-"https://www.github.com"}'
-  GITHUB_UI_PATH: "{{.GITHUB_URL}}/{{.GITHUB_PATH}}"
   GITHUB_TOKEN:
     sh: echo ${GITHUB_TOKEN:-""}
 
@@ -18,16 +17,27 @@ tasks:
     cmds:
       - |
         echo "GITHUB_PATH: {{.GITHUB_PATH}}"
-        echo "GITHUB_UI_PATH: {{.GITHUB_UI_PATH}}"
 
   ui:
     desc: Open website for github project
     cmds:
       - |
-        open {{.GITHUB_UI_PATH}}
+        GITHUB_UI_PATH=$(git remote get-url origin 2>/dev/null | sed -Ee 's/.*:(.+)\.git/\1/' | awk '{print "https://www.github.com/" $1}')
+        echo "path: ${GITHUB_UI_PATH}"
+        if [[ "$OSTYPE" == "darwin"* ]]; then
+          open ${GITHUB_UI_PATH}
+        else
+          xdg-open ${GITHUB_UI_PATH}
+        fi
 
   actions:ui:
     desc: Open website for github project actions
     cmds:
       - |
-        open {{.GITHUB_UI_PATH}}/actions
+        GITHUB_UI_PATH=$(git remote get-url origin 2>/dev/null | sed -Ee 's/.*:(.+)\.git/\1/' | awk '{print "https://www.github.com/" $1}')
+        echo "path: ${GITHUB_UI_PATH}"
+        if [[ "$OSTYPE" == "darwin"* ]]; then
+          open ${GITHUB_UI_PATH}/actions
+        else
+          xdg-open ${GITHUB_UI_PATH}/actions
+        fi
