--- a/.mise.toml
+++ b/.mise.toml
@@ -1,20 +1,21 @@
 [tools]
-go = '1.22.2'
+#go = '1.22.2'
 python = '3.11.6'
-task = '3.37.2'
-vault = '1.15.2'
-terraform = '1.6.5'
-kubectl = '1.27.2'
-fzf = '0.44.0'
-yq = "4.40.1"
-jq = '1.7'
-gomplate = 'v3.11.6'
-sops = '3.8.1'
+task = 'latest'
+uv = 'latest'
+#terraform = '1.6.5'
+#kubectl = '1.27.2'
+fzf = 'latest'
+yq = "latest"
+jq = 'latest'
+#gomplate = 'v3.11.6'
+#sops = '3.8.1'
 vendir = '0.38.0'
-agebox = '0.6.1'
-node = '21.7.3'
-"go:github.com/zyedidia/eget" = "latest"
-"npm:prettier" = "3.2.5"
+#agebox = '0.6.1'
+#node = '21.7.3'
+#"go:github.com/zyedidia/eget" = "latest"
+#"npm:prettier" = "3.2.5"
 yamllint = "1.35.1"
-helmfile = "0.165.0"
-helm = "3.15.2"
+#helmfile = "0.165.0"
+#helm = "3.15.2"
+
