--- a/config/Brewfile
+++ b/config/Brewfile
@@ -4,41 +4,29 @@ tap "mitchellh/gon"
 # tap "alajmo/sake"
 
 # Binaries
-brew "node"
-brew "git"
 brew "zsh"
 brew "tmux"
 brew "wget"
-brew "curl"
-brew "python"
-brew "go"
 brew "coreutils"
 brew "gnu-sed"
 brew "openssl"
 brew "bc"
-brew "jq"
-brew "yq"
-brew "fzf"
 brew "rsync"
 brew "automake"
-brew "awscli"
-brew "aws-iam-authenticator"
 brew "tree"
-brew "direnv"
 brew "osslsigncode"
-brew "asdf"
-# brew "sake"
-# brew "sema"
+brew "syncthing"
 
 cask_args appdir: "~/Applications"
 
 # Apps
-#cask "cheatsheet"
-#cask "vagrant"
+cask "warp"
+cask "keepassxc"
+cask "tabby"
 cask "firefox"
-#cask "iterm2"
 cask "visual-studio-code"
 cask "slack"
-#cask "skype-for-business"
 cask "docker"
-cask "virtualbox"
+
+# Services
+service "syncthing"
